# Search2

./: .gitignore  CMakeLists.txt  README.md  Search 2.code-workspace  calc.ipynb  calc_itemized.ipynb  generate_main.ipynb  main.c  shared_functions.py  valgrind_output.txt
generated_headers/: 12_letter_words.h  13_letter_words.h  14_letter_words.h  15_letter_words.h  16_letter_words.h  17_letter_words.h  18_letter_words.h  19_letter_words.h  1_letter_words.h  20_letter_words.h  21_letter_words.h  22_letter_words.h  23_letter_words.h  24_letter_words.h  25_letter_words.h  27_letter_words.h  28_letter_words.h  29_letter_words.h  2_letter_words.h  31_letter_words.h  3_letter_words.h  4_letter_words.h  5_letter_words.h  6_letter_words.h  7_letter_words.h  words.h
generated_source_files/: main.c
generator_helpers/: control_loop.txt  thread_functions.txt
generators/: generate_main.ipynb
generators/generator_helpers/: shared_functions.py
notes/: Search2Perf_Jan2_2025_control.txt  Search2_Jan2_2025_control.asm  calc.ipynb  calc_itemized.ipynb  commands.txt  dev_log.txt  py_jam_words_alpha.ipynb  valgrind_run_cmd.txt
notes/snapshots/: Jan2_2025_assembly_test.asm  Jan2_2025_performance_test.txt  Jan3_2025_assembly_control.asm  Jan3_2025_assembly_test.asm  Jan3_2025_performance_control.txt  Jan3_2025_performance_test.txt  Jan7_2025_assembly_control.asm  Jan7_2025_assembly_test.asm  Jan7_2025_performance_control.txt  Jan7_2025_performance_test.txt  Jan9_2025_assembly_control.asm  Jan9_2025_assembly_test.asm  Jan9_2025_performance_control.txt  Jan9_2025_performance_test.txt
src/: primary_thread.h  search.c  test_wordlist.c  wordlist.c  wordlist.h
src/private/: primary_thread.c  search.c  test_wordlist.c  wordlist.c
src/public/: database_interop.h  search.h  test_wordlist.h
